fixed: card bilik suara 2, card collapse

--- a/public/style/votingkeun.css
+++ b/public/style/votingkeun.css
@@ -31,6 +31,10 @@
     color: var(--theme-color);
 }
 
+.color-theme:hover, .color-theme:focus, .color-theme:active {
+    color: var(--theme-color);
+}
+
 .bg-tertiary-theme {
     background-color: var(--tertiary-theme-color);
 }
@@ -55,6 +59,10 @@
     color: var(--theme-color);
 }
 
+.rotate-up {
+    transform: rotate(-180deg);
+}
+
 
 
 /* *** Do to all *** */
@@ -62,17 +70,17 @@
     font-family: var(--poppins);
 }
 
-body::-webkit-scrollbar {
-    display:none;
-}
-
 body {
     max-width: 360px;
     margin: auto;
 }
 
+body.bilik-suara-2 {
+    max-width: 100%;
+}
+
 /* *** Login Form *** */
-#username:f, #password:f {
+#username:focus, #password:focus {
     border: 1px solid black;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -81,3 +89,26 @@ body {
 #iconMinus {
     display: none;
 }
+
+/* *** bilik suara 2 *** */
+.bilik-2.collapse:not(.show) {
+    display: block;
+    height: 45px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis !important;
+}
+
+.bilik-2.collapsing {
+    height: 45px;
+}
+
+.accordion-body {
+    white-space: wrap;
+    overflow: hidden;
+    text-overflow: ellipsis !important;
+}
+.accordion-button:not(.collapsed)::after {
+    background-image: var(--bs-accordion-btn-active-icon);
+    transform: rotate(180deg) !important;
+  }
